# ledger-infrastructure

./: .env.example  .gitignore  DOMAIN_NOTES.md  README.md  main.py  pyproject.toml  requirements.txt
db/: projections_schema.sql  schema.sql
src/: events.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/domain/: aggregates.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: server.py  tools.py
src/projections/: daemon.py  handlers.py  models.py
src/store/: concurrency.py  event_store.py  upcaster.py
src/upcasting/: upcasters.py
tests/: fixture_update.py  test_concurrency.py  test_gas_town.py  test_integrity.py  test_mcp_lifecycle.py  test_projections.py  test_upcasting.py
