[project]
name = "ledger-infrastructure"
version = "0.1.0"
description = "Agentic Event Store & Enterprise Audit Infrastructure"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "orjson>=3.9.0",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "faker>=20.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "faker>=20.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]